need to add the modal and fixed the grid alignment

--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,5 @@
     font-weight: weight;
     font-style: normal;
 }
+
+html{ scroll-behavior: smooth;}
